fix: fix tag border at mobile and fix toggle hamburger bar affect logo's visibility

--- a/packages/static-ui/src/containers/Home/landing_page.css
+++ b/packages/static-ui/src/containers/Home/landing_page.css
@@ -1488,10 +1488,6 @@ body {
     padding-left: 0px;
   }
 
-  .event-tag {
-    border-width: 3px;
-  }
-
   .grid-2 {
     display: -ms-grid;
     display: grid;
